--- a/package.json
+++ b/package.json
@@ -22,21 +22,23 @@
   "devDependencies": {
     "@babel/cli": "7.2.3",
     "@babel/core": "7.3.4",
-    "@babel/preset-env": "7.3.4",
     "@babel/plugin-proposal-class-properties": "7.3.4",
     "@babel/plugin-proposal-object-rest-spread": "7.3.4",
     "@babel/plugin-transform-runtime": "7.3.4",
+    "@babel/preset-env": "7.3.4",
+    "@dot-event/args": "1.0.3",
+    "@dot-event/glob": "0.0.6",
     "@dot-event/store": "7.0.17",
     "@dot-event/wait": "0.0.6",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
     "eslint": "5.15.1",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-prettier": "3.0.1",
-    "prettier": "1.16.4",
-    "babel-eslint": "10.0.1",
     "husky": "1.3.1",
-    "lint-staged": "8.1.5",
     "jest": "24.3.1",
-    "babel-core": "7.0.0-bridge.0"
+    "lint-staged": "8.1.5",
+    "prettier": "1.16.4"
   },
   "operations": {
     "watchman": {
