--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "@dot-event/version",
+  "name": "@emit-js/version",
   "version": "0.0.12",
-  "description": "dot-event package.json versioning",
+  "description": "emit package.json versioning",
   "keywords": [
-    "dot-event",
+    "emit",
     "package.json",
     "semver",
     "version"
   ],
-  "author": "dot-event <oss@dot-event.io>",
+  "author": "emit <emit@emit-js.com>",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/dot-event/version.git"
+    "url": "git+ssh://git@github.com/emit-js/version.git"
   },
   "license": "MIT",
-  "homepage": "https://github.com/dot-event/version#readme",
+  "homepage": "https://github.com/emit-js/version#readme",
   "dependencies": {
-    "@babel/runtime": "7.4.2",
+    "@babel/runtime": "7.4.3",
     "fs-extra": "7.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.4.0",
+    "@babel/cli": "7.4.3",
+    "@babel/core": "7.4.3",
     "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
-    "@babel/plugin-transform-runtime": "7.4.0",
-    "@babel/preset-env": "7.4.2",
-    "@dot-event/args": "1.0.4",
-    "@dot-event/glob": "0.0.9",
-    "@dot-event/store": "7.0.18",
-    "@dot-event/wait": "0.0.7",
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/preset-env": "7.4.3",
+    "@emit-js/args": "1.0.4",
+    "@emit-js/glob": "0.0.9",
+    "@emit-js/store": "7.0.19",
+    "@emit-js/wait": "0.0.7",
+    "babel-core": "6.26.3",
     "babel-eslint": "10.0.1",
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-prettier": "3.0.1",
     "husky": "1.3.1",
-    "jest": "24.5.0",
+    "jest": "24.7.1",
     "lint-staged": "8.1.5",
     "prettier": "1.16.4"
   },
